istio/petKube/engress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: https-api-dog
spec:
  hosts:
  - api.thedogapi.co.uk
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: https-api-dog
spec:
  hosts:
  - api.thedogapi.co.uk
  tls:
  - match:
    - port: 443
    route:
    - destination:
        host: api.thedogapi.co.uk
        port:
          number: 443
      weight: 100
