istio/petKube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-petservice
spec:
  hosts:
  - "*"
  gateways:
  - petservice-gateway
  http:
  - match:
    - uri:
        prefix: "/pet"
    route:  
    - destination:
        host: petservice
        port:
          number: 9080
